# ChipDaddy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: windows-mingw64.cmake
src/: Platform.cpp  Platform.h
src/GUI/: GUI.cpp  GUI.h
src/gui/: gui.cpp  gui.h
src/hardware/: chip.cpp  chip.h  chip8.cpp  chip8.h  instructions.cpp  instructions.h
src/instructions/: instructions.cpp  instructions.h
